# internal/controller/controller.go
@@ -7,6 +7,7 @@ import (
 
 	"github.com/go-playground/validator/v10"
 	"github.com/itmosha/auth-service/internal/entity"
+	"github.com/itmosha/auth-service/internal/storage"
 	"github.com/itmosha/auth-service/internal/usecase"
 	"github.com/itmosha/auth-service/pkg/logger"
 )
@@ -14,6 +15,7 @@ import (
 type UsecaseInterface interface {
 	Register(ctx *context.Context, body *entity.RegisterBody) (userMeta *entity.UserMeta, err error)
 	ConfirmRegister(ctx *context.Context, body *entity.ConfirmRegisterBody) (tokenPair *entity.TokenPair, err error)
+	Login(ctx *context.Context, body *entity.LoginBody) (err error)
 }
 
 type Controller struct {
@@ -28,7 +30,7 @@ func NewController(uc UsecaseInterface, logger *logger.Logger) *Controller {
 // @Title Register new user.
 // @Descriptiomn Register a new user using a phonenumber.
 // @Param body body entity.RegisterBody true "Registration body"
-// @Success 201 object entity.UserMeta "Successful registration"
+// @Success 201 object entity.UserMeta "Successful registration, user meta in response body"
 // @Failure 400 object errorResponseBody "Invalid request body"
 // @Failure 409 object errorResponseBody "User already registered"
 // @Failure 422 object errorResponseBody "User registration not finished"
@@ -67,8 +69,8 @@ func (c *Controller) Register() http.HandlerFunc {
 // @Title Confirm user registration.
 // @Descriptiomn Confirm user registration by uid.
 // @Param body body entity.ConfirmRegisterBody true "Confirm registration body"
-// @Success 200 object entity.TokenPair "Successful confirmation"
-// @Failure 400 object errorResponseBody "Invalid request body"
+// @Success 200 object entity.TokenPair "Successful confirmation, token pair in response body"
+// @Failure 400 object errorResponseBody "Invalid request body or user does not exist"
 // @Failure 409 object errorResponseBody "User already registered"
 // @Failure 422 object errorResponseBody "Wrong confirmation code provided"
 // @Failure 500 object errorResponseBody "Internal server error"
@@ -92,6 +94,8 @@ func (c *Controller) ConfirmRegister() http.HandlerFunc {
 		if err != nil {
 			if errors.Is(err, usecase.ErrAlreadyRegistered) {
 				responseWithError(w, r, http.StatusConflict, err)
+			} else if errors.Is(err, storage.ErrUserMetaNotFound) {
+				responseWithError(w, r, http.StatusBadRequest, err)
 			} else if errors.Is(err, usecase.ErrWrongCodeProvided) {
 				responseWithError(w, r, http.StatusUnprocessableEntity, err)
 			} else {
@@ -103,13 +107,41 @@ func (c *Controller) ConfirmRegister() http.HandlerFunc {
 	}
 }
 
-// @Title Log in user.
-// @Failure 501 {object} errorResponseBody
+// @Title Log in.
+// @Descriptiomn Log in a user by phonenumber.
+// @Param body body entity.LoginBody true "Login body"
+// @Success 204 "Successful confirmation, no content in response body"
+// @Failure 400 object errorResponseBody "Invalid request body or user does not exist"
+// @Failure 422 object errorResponseBody "User registration not finished"
+// @Failure 500 object errorResponseBody "Internal server error"
 // @Resource Auth
 // @Route /api/login/ [post]
 func (c *Controller) Login() http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
-		responseWithError(w, r, http.StatusNotImplemented, nil)
+		ctx := context.Background()
+		body, err := readBodyToStruct(r, &entity.LoginBody{})
+		if err != nil {
+			responseWithError(w, r, http.StatusBadRequest, err)
+			return
+		}
+		err = c.validator.StructCtx(ctx, body)
+		if err != nil {
+			errors := err.(validator.ValidationErrors)
+			responseWithError(w, r, http.StatusBadRequest, errors)
+			return
+		}
+		err = c.uc.Login(&ctx, body)
+		if err != nil {
+			if errors.Is(err, usecase.ErrRegistrationNotFinished) {
+				responseWithError(w, r, http.StatusUnprocessableEntity, err)
+			} else if errors.Is(err, storage.ErrUserMetaNotFound) {
+				responseWithError(w, r, http.StatusBadRequest, err)
+			} else {
+				responseWithError(w, r, http.StatusInternalServerError, err)
+			}
+			return
+		}
+		responseWithSuccess(w, r, http.StatusNoContent, nil)
 	}
 }
 
